docs/7.52/md/abenabap_ixml_lib_dom.md
---
title: "abap_ixml_lib_dom"
description: |
  abap_ixml_lib_dom - ABAP 7.52 language reference documentation
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_ixml_lib_dom.htm"
abapFile: "abenabap_ixml_lib_dom.htm"
keywords: ["do", "if", "class", "data", "types", "abenabap", "ixml", "lib", "dom"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm) →  [Class Libraries for XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_libs.htm) →  [iXML Library](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_ixml_lib.htm) →  [iXML Library - Classes and Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_ixml_lib_object_types.htm) → 

iXML Library - DOM

The following interfaces in iXML Library handle DOM:

IF\_IXML\_UNKNOWN
  |
  |--IF\_IXML\_NODE
  |    |
  |    |--IF\_IXML\_DOCUMENT
  |    |
  |    |--IF\_IXML\_DOCUMENT\_FRAGMENT
  |    |
  |    |--IF\_IXML\_ELEMENT
  |    |
  |    |--IF\_IXML\_ATTRIBUTE
  |    |
  |    |--IF\_IXML\_CHARACTER\_DATA
  |    |    |
  |    |    |--IF\_IXML\_COMMENT
  |    |    |
  |    |    |--IF\_IXML\_TEXT
  |    |        |
  |    |        |--IF\_IXML\_CDATA\_SECTION
  |    |
  |    |--IF\_IXML\_ENTITY\_REF
  |    |
  |    |--IF\_IXML\_PI
  |    |    |
  |    |    |--IF\_IXML\_PI\_UNPARSED
  |    |    |
  |    |    |--IF\_IXML\_PI\_PARSED
  |    |
  |    |--IF\_IXML\_DOCUMENT\_TYPE
  |    |
  |    |--IF\_IXML\_CONTENT\_PARTICLE
  |    |    |
  |    |    |--IF\_IXML\_ELEMENT\_DECL
  |    |
  |    |--IF\_IXML\_ATT\_LIST\_DECL
  |    |
  |    |--IF\_IXML\_ATTRIBUTE\_DECL
  |    |
  |    |--IF\_IXML\_ENTITY\_DECL
  |    |
  |    |--IF\_IXML\_NOTATION\_DECL
  |    |
  |    |--IF\_IXML\_COND\_DTD\_SECTION
  |
  |--IF\_IXML\_NODE\_LIST
  |
  |--IF\_IXML\_NODE\_COLLECTION
  |
  |--IF\_IXML\_NAMED\_NODE\_MAP
  |
  |--IF\_IXML\_NODE\_ITERATOR
  |
  |--IF\_IXML\_NODE\_FILTER
  |
  |--IF\_IXML\_NAMESPACE\_CONTEXT